cmd/shared/libgogit.h

extern char* GitAuthNewSSHKey(char* user, char* pem, char* password, long long* handleOut);
extern char* GitAuthNewSSHAgent(char* user, long long* handleOut);
extern char* GitAuthNewSSHPassword(char* user, char* password, long long* handleOut);
extern void GitAuthFree(long long handle);
extern char* GitCommitIterNext(long long iterHandle, char** hashOut, char** msgOut, char** authorNameOut, char** authorEmailOut, long long* tsOut, int* eofOut);
extern void GitCommitIterFree(long long iterHandle);
extern char* GitReferenceIterNext(long long iterHandle, char** refNameOut, char** hashOut, int* eofOut);
extern void GitReferenceIterFree(long long iterHandle);
extern void GitCloneOptionsNew(long long* handleOut);
extern char* GitCloneOptionsSetURL(long long handle, char* val);
extern char* GitCloneOptionsSetAuth(long long handle, long long authHandle);
extern char* GitCloneOptionsSetRemoteName(long long handle, char* val);
extern char* GitCloneOptionsSetReferenceName(long long handle, char* val);
extern char* GitCloneOptionsSetSingleBranch(long long handle, int val);
extern char* GitCloneOptionsSetMirror(long long handle, int val);
extern char* GitCloneOptionsSetNoCheckout(long long handle, int val);
extern char* GitCloneOptionsSetDepth(long long handle, int val);
extern char* GitCloneOptionsSetBare(long long handle, int val);
extern char* GitCloneOptionsSetInsecureSkipTLS(long long handle, int val);
extern char* GitCloneOptionsSetShared(long long handle, int val);
extern char* GitCloneOptionsSetTags(long long handle, int val);
extern void GitCloneOptionsFree(long long handle);
extern void GitPullOptionsNew(long long* handleOut);
extern char* GitPullOptionsSetRemoteName(long long handle, char* val);
extern char* GitPullOptionsSetRemoteURL(long long handle, char* val);
extern char* GitPullOptionsSetReferenceName(long long handle, char* val);
extern char* GitPullOptionsSetSingleBranch(long long handle, int val);
extern char* GitPullOptionsSetDepth(long long handle, int val);
extern char* GitPullOptionsSetAuth(long long handle, long long authHandle);
extern char* GitPullOptionsSetForce(long long handle, int val);
extern char* GitPullOptionsSetInsecureSkipTLS(long long handle, int val);
extern void GitPullOptionsFree(long long handle);
extern void GitFetchOptionsNew(long long* handleOut);
extern char* GitFetchOptionsSetRemoteName(long long handle, char* val);
extern char* GitFetchOptionsSetRemoteURL(long long handle, char* val);
extern char* GitFetchOptionsSetDepth(long long handle, int val);
extern char* GitFetchOptionsSetAuth(long long handle, long long authHandle);
extern char* GitFetchOptionsSetTags(long long handle, int val);
extern char* GitFetchOptionsSetForce(long long handle, int val);
extern char* GitFetchOptionsSetInsecureSkipTLS(long long handle, int val);
extern char* GitFetchOptionsSetPrune(long long handle, int val);
extern void GitFetchOptionsFree(long long handle);
extern void GitPushOptionsNew(long long* handleOut);
extern char* GitPushOptionsSetRemoteName(long long handle, char* val);
extern char* GitPushOptionsSetRemoteURL(long long handle, char* val);
extern char* GitPushOptionsSetAuth(long long handle, long long authHandle);
extern char* GitPushOptionsSetPrune(long long handle, int val);
extern char* GitPushOptionsSetForce(long long handle, int val);
extern char* GitPushOptionsSetInsecureSkipTLS(long long handle, int val);
extern char* GitPushOptionsSetFollowTags(long long handle, int val);
extern char* GitPushOptionsSetAtomic(long long handle, int val);
extern char* GitPushOptionsSetQuiet(long long handle, int val);
extern void GitPushOptionsFree(long long handle);
extern void GitCheckoutOptionsNew(long long* handleOut);
extern char* GitCheckoutOptionsSetHash(long long handle, char* val);
extern char* GitCheckoutOptionsSetBranch(long long handle, char* val);
extern char* GitCheckoutOptionsSetCreate(long long handle, int val);
extern char* GitCheckoutOptionsSetForce(long long handle, int val);
extern char* GitCheckoutOptionsSetKeep(long long handle, int val);
extern void GitCheckoutOptionsFree(long long handle);
extern void GitResetOptionsNew(long long* handleOut);
extern char* GitResetOptionsSetCommit(long long handle, char* val);
extern char* GitResetOptionsSetMode(long long handle, int val);
extern void GitResetOptionsFree(long long handle);
extern void GitRestoreOptionsNew(long long* handleOut);
extern char* GitRestoreOptionsSetStaged(long long handle, int val);
extern char* GitRestoreOptionsSetWorktree(long long handle, int val);
extern char* GitSignerNewPGP(char* armoredKey, char* passphrase, long long* handleOut);
extern void GitSignerFree(long long handle);
extern void GitSigningKeyFree(long long handle);