cmd/shared/dotnet/GoGit.Interop/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthNewSSHKey(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string user,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string pem,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string password,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthNewSSHAgent(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string user,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthNewSSHPassword(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string user,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string password,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitAuthFree(long handle);

    // Signer constructors

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSignerNewPGP(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string armoredKey,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string passphrase,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitSignerFree(long handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitSigningKeyFree(long handle);

    // Iterators

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitIterNext(
        long iterHandle,
        out IntPtr hashOut,
        out IntPtr msgOut,
        out IntPtr authorNameOut,
        out IntPtr authorEmailOut,
        out long tsOut,
        out int eofOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCommitIterFree(long iterHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitReferenceIterNext(
        long iterHandle,
        out IntPtr refNameOut,
        out IntPtr hashOut,
        out int eofOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitReferenceIterFree(long iterHandle);

    // CloneOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCloneOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetURL(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetAuth(long handle, long authHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetRemoteName(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetReferenceName(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetSingleBranch(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetMirror(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetNoCheckout(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetDepth(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetBare(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetInsecureSkipTLS(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetShared(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetTags(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCloneOptionsFree(long handle);

    // PullOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitPullOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetRemoteName(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetRemoteURL(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetReferenceName(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetSingleBranch(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetDepth(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetAuth(long handle, long authHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetForce(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetInsecureSkipTLS(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitPullOptionsFree(long handle);

    // FetchOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitFetchOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitFetchOptionsSetRemoteName(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitFetchOptionsSetRemoteURL(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitFetchOptionsSetDepth(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitFetchOptionsSetAuth(long handle, long authHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitFetchOptionsSetTags(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitFetchOptionsSetForce(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitFetchOptionsSetInsecureSkipTLS(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitFetchOptionsSetPrune(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitFetchOptionsFree(long handle);

    // PushOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitPushOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetRemoteName(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetRemoteURL(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetAuth(long handle, long authHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetPrune(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetForce(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetInsecureSkipTLS(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetFollowTags(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetAtomic(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetQuiet(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitPushOptionsFree(long handle);

    // CheckoutOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCheckoutOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCheckoutOptionsSetHash(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCheckoutOptionsSetBranch(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCheckoutOptionsSetCreate(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCheckoutOptionsSetForce(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCheckoutOptionsSetKeep(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCheckoutOptionsFree(long handle);

    // ResetOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitResetOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitResetOptionsSetCommit(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitResetOptionsSetMode(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitResetOptionsFree(long handle);

    // RestoreOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitRestoreOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRestoreOptionsSetStaged(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRestoreOptionsSetWorktree(long handle, int val);
